<resources>

    <string name="app_name">Excel</string>

    <string name="hello">Hello World</string>

    <string name="welcome">Welcome to Excel</string>
    <string name="sub_heading">My Custom Heading</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_login">Login</string>
    <string name="user_register">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <string name="email_error">This field is required</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="user_confirm_password">Confirm Password</string>

    <string name="validating">Validating Information…</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="password_length_error">Password must be at least 6 character long</string>

    <string name="file_name">File Name</string>
    <string name="default_file_name">New File</string>
    <string name="file_rows">Number of Rows</string>
    <string name="file_columns">Columns</string>
    <string name="save">Save</string>
    <string name="settings_text">Settings</string>

    <string name="add_column">Insert Column</string>
    <string name="add_row">Insert Row</string>
    <string name="export_as">Export As</string>
    <string name="add_people">Add People</string>
    <string name="export_as_excel">Create Excel</string>
    <string name="export_as_pdf">Create PDF</string>
    <string name="export_as_word">Create Word</string>

    <string-array name="row_column_selection">
        <item>Add Row</item>
        <item>Add Column</item>
    </string-array>

    <string-array name="column_options">
        <item>Text Column</item>
        <item>Image Column</item>
        <item>Number Column</item>
        <item>Phone Column</item>
        <item>Date Column</item>
        <item>Location Column</item>
        <item>Price Column</item>
        <item>Checkbox Column</item>
        <item>List Column</item>
    </string-array>


    //settings strings

    <string name="guidelines_key">guidelines</string>
    <string name="guidelines">Guidelines</string>
    <string name="guidelines_summary">Show helper text in every screen</string>
    <string name="guidelines_default">false</string>

    <string name="app_textsize_key">appTextSize</string>
    <string name="app_textsize">App Text Size</string>
    <string name="app_textsize_default">Medium</string>
    <string name="app_textsize_summary">Medium</string>
    <string name="textsize_dialog_title">Select Font Size</string>
    <string name="table_settings">Table Settings</string>


    <string name="table_textsize_key">tabelTextSize</string>
    <string name="table_textsize">Tabel Text Size</string>
    <string name="tabel_textsize_default">Medium</string>

    <string name="number_settings">Number Settings</string>

    <string name="currency_prefix">Currency Prefix</string>
    <string name="currency_summary">$</string>
    <string name="currency_default_value">$</string>
    <string name="currency_key">currencyKey</string>
    <string name="currency_dialog_title">Select prefix</string>

    <string name="number_separator_key">numberSeparator</string>
    <string name="number_separator">Number Separator</string>
    <string name="number_separator_summary">Not set</string>
    <string name="number_separator_dialog">Select format</string>
    <string name="number_separator_default">Not set</string>

    <string name="emptycell_display_key">emptyCellDisplay</string>
    <string name="emptycell_display">Empty Cell Display</string>
    <string name="emptycell_display_summary">Show 0 in empty cell boxes for number columns</string>
    <string name="emptycell_display_default">false</string>


    <string name="about_application">About</string>
    <string name="version">Version</string>
    <string name="version_summary">1.0</string>


    <array name="text_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </array>

    <array name="currency_signs">
        <item>$</item>
        <item>৳</item>
        <item>₹</item>
        <item>Rs</item>
        <item>€</item>
        <item>£</item>
        <item>¥</item>
        <item>₩</item>
        <item>₿</item>
    </array>

    <array name="number_formats">
        <item>Not set</item>
        <item>1,000,000 (Millions)</item>
        <item>10,00,000 (Lacs)</item>
        <item>1,0000,0000 (Ten Thousand)</item>
    </array>

    <!-- drawer menu strings -->

    <string name="buy_and_subscribe">Buy/Subscribe</string>
    <string name="rate_us">Rate Us</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="General">General</string>
    <string name="email_address">something@email.com</string>
    <string name="add_item_hint">Add Item</string>
    <string name="add">Add</string>
    <string name="initializing">Initializing</string>
    <string name="forgot_password">Forgot the password</string>
    <string name="send">Send</string>
    <string name="confirm_email">Confirm your email address to send password to mail</string>


</resources>
