<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.editor.FileEditActivity">

    <item android:id="@+id/add_row"
        android:title="@string/add_row"
        app:showAsAction="never"/>
    <item android:id="@+id/add_column"
        android:title="@string/add_column"
        app:showAsAction="never"/>
    <item android:id="@+id/export"
        android:title="@string/export_as"
        app:showAsAction="never">

        <menu>
            <item android:id="@+id/export_excel"
                android:title="@string/export_as_excel"
                android:icon="@drawable/ic_xls"/>
            <item android:id="@+id/export_pdf"
                android:title="@string/export_as_pdf"
                android:icon="@drawable/ic_pdf"/>
            <item android:id="@+id/export_word"
                android:title="@string/export_as_word"
                android:icon="@drawable/ic_doc"/>
        </menu>

    </item>
    <item android:id="@+id/add_people"
        android:title="@string/add_people"
        app:showAsAction="never"/>

</menu>