<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/General" >

        <menu>

            <item
                android:id="@+id/navDrawer_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/navDrawer_Buy"
                android:icon="@drawable/ic_buy"
                android:title="@string/buy_and_subscribe" />

            <item
                android:id="@+id/navDrawer_rateUs"
                android:icon="@drawable/ic_rate_us"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/navDrawer_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />

        </menu>

    </item>

</menu>