<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#efefef"
    tools:context=".view.selector.SelectorActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/selector_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_11sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/card_bg_outline"
        android:hint="@string/file_name"
        android:text="@string/default_file_name"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_5sdp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_rows"
            android:textSize="@dimen/_11sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/row_picker"/>

        <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
            android:id="@+id/row_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/number_picker"
            app:snp_orientation="horizontal"
            app:snp_valueMarginEnd="5dp"
            app:snp_valueMarginStart="5dp"
            app:snp_value_text_color="@android:color/white"
            app:snp_value_text_size="@dimen/_10sdp"
            app:snp_buttonPaddingBottom="8dp"
            app:snp_buttonPaddingLeft="8dp"
            app:snp_buttonPaddingRight="8dp"
            app:snp_buttonPaddingTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_5sdp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_columns"
            android:textSize="@dimen/_11sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/column_picker"/>

        <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
            android:id="@+id/column_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/number_picker"
            app:snp_orientation="horizontal"
            app:snp_valueMarginEnd="5dp"
            app:snp_valueMarginStart="5dp"
            app:snp_value_text_color="@android:color/white"
            app:snp_value_text_size="@dimen/_10sdp"
            app:snp_buttonPaddingBottom="8dp"
            app:snp_buttonPaddingLeft="8dp"
            app:snp_buttonPaddingRight="8dp"
            app:snp_buttonPaddingTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/column_item_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        tools:listitem="@layout/model_column_selection"/>

</LinearLayout>